[package]
name = "server"
version = "0.1.0"
authors = ["russ-0 <alexander.pogodin@gmail.com>"]
edition = "2018"

[dependencies]
mio = "0.6.19"
priority-queue = "0.7.0"
chrono = "0.4.10"

[lib]
name = "chatlib"
path = "src/lib/chatlib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
