[package]
name = "miki-srv"
version = "0.1.0"
authors = ["russ-0 <alexander.pogodin@gmail.com>"]
edition = "2018"

[dependencies]
ws = "0.9.1"
rocket = "0.4.5"
chrono = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]
